<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/archives_main_scrollview"
  android:fillViewport="true" 
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent">
  <LinearLayout android:id="@+id/archives_main_layout"
     android:orientation="vertical" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     android:scrollbarAlwaysDrawVerticalTrack="true" >
    <TextView android:id="@+id/archives_summary"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" 
              android:text="@string/summary" />
    <View
          android:background="@drawable/black_white_gradient"
          android:layout_width="fill_parent"
          android:layout_height="1dp"
          android:layout_below="@id/summary" />
    <View
          android:background="@drawable/black_white_gradient"
          android:layout_width="fill_parent"
          android:layout_height="1dp"
          android:layout_below="@id/backup_call_records" />

    <LinearLayout android:id="@+id/archives_buttons_layout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
      <Button
          android:id="@+id/archives_share"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/share" />
      <Button
          android:id="@+id/archives_delete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/delete" />
      <Button
          android:id="@+id/archives_exit_app"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/exit_app" />
    </LinearLayout>
    <View
        android:background="@drawable/black_white_gradient"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/summary" />
    <View
        android:background="@drawable/black_white_gradient"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/backup_call_records" />
    <ListView
        android:id="@+id/archives_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" />
  </LinearLayout>
</ScrollView>
